[gd_scene load_steps=5 format=3 uid="uid://81glhuk3tdvu"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_small.gd" id="1_1ndf0"]
[ext_resource type="Texture2D" uid="uid://dx0aejwdl600t" path="res://sprites/mobs/Icon1.png" id="2_f1aq1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e06s6"]
size = Vector2(23, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_le7e8"]
size = Vector2(25, 29)

[node name="EnemySmall" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_1ndf0")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_f1aq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -0.5)
shape = SubResource("RectangleShape2D_e06s6")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="HitDelay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(1.5, -0.5)
shape = SubResource("RectangleShape2D_le7e8")

[connection signal="body_entered" from="DamageArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_area_2d_body_exited"]
